[package]
name = "took"
version = "0.1.2"
authors = ["Tim Visee <3a4fb3964f@sinenomine.email>"]
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/timvisee/took-rs"
repository = "https://gitlab.com/timvisee/took-rs"
description = "Easily measure & report elapsed time"
keywords = ["time", "measure", "elapsed", "took", "stopwatch"]
categories = ["command-line-interface", "development-tools"]
edition = "2018"

[badges]
gitlab = { repository = "timvisee/took-rs", branch = "master" }

[workspace]
members = ["took-macro"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
