[package]
name = "took-macro"
version = "0.1.0"
authors = ["Tim Visee <3a4fb3964f@sinenomine.email>"]
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/timvisee/took-rs"
repository = "https://gitlab.com/timvisee/took-rs"
description = "Easily measure & report elapsed time macros"
keywords = ["time", "measure", "elapsed", "took", "stopwatch"]
categories = ["command-line-interface", "development-tools"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
took = { version = "*", path = "../" }
